# intelligencebox-plugins

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: docker-daemon.json
.github/workflows/: build-and-publish.yml
registry-api/: .env.example  .gitignore  .vercelignore  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
registry-api/public/: index.html
registry-api/src/: index.ts
registry-cli/: .gitignore  README.md  package-lock.json  package.json
registry-cli/src/: api-client.ts  index.ts  menu.ts  types.ts
servers/mcp-iop-ticketing-server/: .dockerignore  .env.example  Dockerfile  README.md  index.js  index.ts  list-endpoints.js  manifest.json  package-lock.json  package.json  tool-categories.json  tool-helper.js  tool-helper.ts  tsconfig.json
servers/mcp-iop-ticketing-server/src/: large-response-handler.ts  smart-tools.ts
servers/mcp_docx_gen/: Dockerfile  pyproject.toml
servers/mcp_docx_gen/src/docx_generator/: __init__.py  __main__.py  server.py
servers/mcp_pdf_generator/: Dockerfile  pyproject.toml  requirements.txt  test_local.py
servers/mcp_pdf_generator/src/pdf_generator/: __init__.py  __main__.py  server.py
