[project]
name = "pdf_generator"
version = "0.1.0"
description = "Un server MCP per generare file PDF da un testo."
requires-python = ">=3.11, <3.13"

dependencies = [
    "mcp~=1.1.3",
    "anyio",
    "sniffio",
    "idna",
    "jsonschema",
    "jsonschema-specifications",
    "referencing",
    "rpds-py",
    "attrs",

    # Reportlab e dipendenze
    "reportlab",
    "Pillow",
    "xhtml2pdf",
    "markdown2",

    # Pydantic e dipendenze
    "pydantic==2.8.2",
    "pydantic_core==2.20.1",
    "annotated-types",
    "typing_extensions",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"